--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <!-- CSS is how we style our website! We're including a Bootstrap CSS file, as well as one you can edit and make your own. -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="/assets/css.styles.css" /> <!-- you can edit this file and include your own styles! -->
+    <link href="./assets/css/styles.css" rel="Stylesheet" /> <!-- you can edit this file and include your own styles! -->
     
     <!-- This is some metadata! It allows us to specify useful things, such as keywords and your website's description.-->
     <meta charset="UTF-8">
@@ -18,28 +18,91 @@
 <!-- Anything put your body is visible on your website! -->
 <body>
 
+    <!-- This is your Navbar! It shows links at the top of the page. -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">/// Your website's name</a>
+
+            <!-- This is some Bootstrap magic! It automatically minimizes your navbar on mobile, and this button lets you open it again. -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">/// Link 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="/">/// Link 2</a>
                 </li>
             </div>
         </div>
     </nav>
+    <br />
 
-    <h1>This is an example website!</h1>
+    <!-- This is a container! It automatically pushes your content in from side to side! -->
+    <div class="container">
+        <h1>This is an example website!</h1>
+        
+        <!-- This is an example two column layout! It's response too! -->
+        <div class="row">
+            <div class="col-12 col-lg-8">
+
+                <!-- Here's an example carousel! It displays images! You can include your own! -->
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <!-- /// You should swap these to be your own images! -->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/images/Photo 1.jpg" class="d-block w-100" alt="/// Add alt text for accessibility reasons!">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/Photo 2.jpg" class="d-block w-100" alt="/// Add alt text for accessibility reasons!">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/images/Photo 3.jpg" class="d-block w-100" alt="/// Add alt text for accessibility reasons!">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
+                <!-- These are placeholder paragraphs! -->
+                <p>Takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                <p>Vestibulum eget elementum magna, at vulputate massa. Sed lorem justo, euismod id augue vitae, imperdiet pulvinar neque. Suspendisse luctus orci et porttitor feugiat. Nulla eget tempus tellus. Morbi id elit quis turpis hendrerit posuere nec at metus. Nunc ultricies libero ut ullamcorper porttitor. Etiam commodo imperdiet dui sit amet lacinia. Nulla condimentum sem eget fermentum tempus. Quisque ultrices placerat ornare. Donec gravida nulla nunc, quis accumsan dui facilisis at. Curabitur condimentum mauris ac felis euismod, eu venenatis ligula venenatis. Sed elementum pulvinar est, in porttitor metus tempus et. Nam ipsum ante, vestibulum eu faucibus eget, vestibulum ut lorem. In facilisis velit odio, tristique hendrerit tortor fringilla sit amet. Nullam vehicula nisl id tempor suscipit. </p>
+                <p>Tri-tip meatloaf biltong, capicola spare ribs salami pork kielbasa. Brisket swine tongue ribeye. Drumstick short ribs ham kevin, filet mignon hamburger cow prosciutto pig chicken shoulder tongue jowl cupim. Corned beef flank drumstick doner tenderloin rump chuck turducken, swine pastrami pig prosciutto picanha. T-bone burgdoggen flank short ribs picanha jowl. Rump fatback boudin shank meatball doner tri-tip jowl bacon. Andouille biltong jerky pastrami, landjaeger spare ribs pork venison hamburger kevin pork chop doner filet mignon porchetta. </p>
+            </div>
+            <div class="col-12 col-lg-4">
+
+                !<!-- This is an example card! You can include one for you and your teammates!-->
+                <div class="card">
+                    <img src="./assets/images/Octane.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text"> /// You could include some info about who you are in your sidebar. In this example, we just included an octane! </p>
+                    </div>
+                </div>
+                <br />
+                <!-- You might to include some links in your sidebar too! -->
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="https://hackp.ac/blahaj">Buy a BLAHAJ</a></li>
+                    <li class="list-group-item"><a href="https://init.mlh.io">Check INIT</a></li>
+                    <li class="list-group-item"><a href="https://github.com/Guederas/mlh-starter-kit">Check my GitHub starter kit</a> </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 
     <!-- This is Bootstrap's JavaScript! Including it is what makes our website's interactive stuff work! -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- You might want to include your own scripts too! We've included an example file with one in here! -->
+    <script src="./assets/js/scripts.js"></script>
 </body>
 
 
