--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <!-- This is your page's title! It's what is shown on Google and in the tab at the top of the screen. -->
-    <title>/// Put your website's name here</title>
+    <title>❗ Put your website's name here</title>
 
     <!-- CSS is how we style our website! We're including a Bootstrap CSS file, as well as one you can edit and make your own. -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -9,9 +9,9 @@
     
     <!-- This is some metadata! It allows us to specify useful things, such as keywords and your website's description.-->
     <meta charset="UTF-8">
-    <meta name="keywords" content="/// Put your keywords here, eg: BLAHAJ, Ryan, MLH, Beluga">"
-    <meta name="description" content="/// Type a description about your website here, a few sentences is fine!!">
-    <meta name="author" content="/// Type your name here!">
+    <meta name="keywords" content="❗ Put your keywords here, eg: BLAHAJ, Ryan, MLH, Beluga">"
+    <meta name="description" content="❗ Type a description about your website here, a few sentences is fine!!">
+    <meta name="author" content="❗ Type your name here!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -21,7 +21,7 @@
     <!-- This is your Navbar! It shows links at the top of the page. -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">/// Your website's name</a>
+            <a class="navbar-brand" href="/">❗ Your website's name</a>
 
             <!-- This is some Bootstrap magic! It automatically minimizes your navbar on mobile, and this button lets you open it again. -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">/// Link 1</a>
+                    <a class="nav-link active" aria-current="page" href="/">❗ Link 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">/// Link 2</a>
+                    <a class="nav-link" href="/">❗ Link 2</a>
                 </li>
             </div>
         </div>
@@ -73,9 +73,9 @@
                 </div>
 
                 <!-- These are placeholder paragraphs! -->
-                <p>Takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
-                <p>Vestibulum eget elementum magna, at vulputate massa. Sed lorem justo, euismod id augue vitae, imperdiet pulvinar neque. Suspendisse luctus orci et porttitor feugiat. Nulla eget tempus tellus. Morbi id elit quis turpis hendrerit posuere nec at metus. Nunc ultricies libero ut ullamcorper porttitor. Etiam commodo imperdiet dui sit amet lacinia. Nulla condimentum sem eget fermentum tempus. Quisque ultrices placerat ornare. Donec gravida nulla nunc, quis accumsan dui facilisis at. Curabitur condimentum mauris ac felis euismod, eu venenatis ligula venenatis. Sed elementum pulvinar est, in porttitor metus tempus et. Nam ipsum ante, vestibulum eu faucibus eget, vestibulum ut lorem. In facilisis velit odio, tristique hendrerit tortor fringilla sit amet. Nullam vehicula nisl id tempor suscipit. </p>
-                <p>Tri-tip meatloaf biltong, capicola spare ribs salami pork kielbasa. Brisket swine tongue ribeye. Drumstick short ribs ham kevin, filet mignon hamburger cow prosciutto pig chicken shoulder tongue jowl cupim. Corned beef flank drumstick doner tenderloin rump chuck turducken, swine pastrami pig prosciutto picanha. T-bone burgdoggen flank short ribs picanha jowl. Rump fatback boudin shank meatball doner tri-tip jowl bacon. Andouille biltong jerky pastrami, landjaeger spare ribs pork venison hamburger kevin pork chop doner filet mignon porchetta. </p>
+                <p>❗ Takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+                <p>❗ Vestibulum eget elementum magna, at vulputate massa. Sed lorem justo, euismod id augue vitae, imperdiet pulvinar neque. Suspendisse luctus orci et porttitor feugiat. Nulla eget tempus tellus. Morbi id elit quis turpis hendrerit posuere nec at metus. Nunc ultricies libero ut ullamcorper porttitor. Etiam commodo imperdiet dui sit amet lacinia. Nulla condimentum sem eget fermentum tempus. Quisque ultrices placerat ornare. Donec gravida nulla nunc, quis accumsan dui facilisis at. Curabitur condimentum mauris ac felis euismod, eu venenatis ligula venenatis. Sed elementum pulvinar est, in porttitor metus tempus et. Nam ipsum ante, vestibulum eu faucibus eget, vestibulum ut lorem. In facilisis velit odio, tristique hendrerit tortor fringilla sit amet. Nullam vehicula nisl id tempor suscipit. </p>
+                <p>❗ Tri-tip meatloaf biltong, capicola spare ribs salami pork kielbasa. Brisket swine tongue ribeye. Drumstick short ribs ham kevin, filet mignon hamburger cow prosciutto pig chicken shoulder tongue jowl cupim. Corned beef flank drumstick doner tenderloin rump chuck turducken, swine pastrami pig prosciutto picanha. T-bone burgdoggen flank short ribs picanha jowl. Rump fatback boudin shank meatball doner tri-tip jowl bacon. Andouille biltong jerky pastrami, landjaeger spare ribs pork venison hamburger kevin pork chop doner filet mignon porchetta. </p>
             </div>
             <div class="col-12 col-lg-4">
 
@@ -83,7 +83,7 @@
                 <div class="card">
                     <img src="./assets/images/Octane.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text"> /// You could include some info about who you are in your sidebar. In this example, we just included an octane! </p>
+                        <p class="card-text"> ❗ You could include some info about who you are in your sidebar. In this example, we just included an octane! </p>
                     </div>
                 </div>
                 <br />
