--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="col-12 col-lg-4">
 
-                !<!-- This is an example card! You can include one for you and your teammates!-->
+                <!-- This is an example card! You can include one for you and your teammates!-->
                 <div class="card">
                     <img src="./assets/images/Octane.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
