--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- This is some metadata! It allows us to specify useful things, such as keywords and your website's description.-->
     <meta charset="UTF-8">
-    <meta name="keywords" content="❗ Put your keywords here, eg: BLAHAJ, Ryan, MLH, Beluga">"
+    <meta name="keywords" content="❗ Put your keywords here, eg: BLAHAJ, Ryan, MLH, Beluga">
     <meta name="description" content="❗ Type a description about your website here, a few sentences is fine!!">
     <meta name="author" content="❗ Type your name here!">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
